<resources>
    <string name="app_name">MeditationSound App</string>
    <string name="binaural_beats">Binaural Beats</string>
    <string name="welcome_first">An age-old practice proved today to be an actual science is as fascinating as magic when it comes to Meditation through Brain Waves.</string>
    <string name="relaxing_sounds">Relaxing Sounds</string>
    <string name="welcome_second">"You can relax and sleep with sleeping sounds, nature sounds, rain sounds, meditation sounds and much more. Enjoy the high quality sleep sounds and wake up refreshed. "</string>
    <string name="welcome_to">Hello, 👋</string>
    <string name="str_home">Home</string>
    <string name="str_dashboard">Dashboard</string>
    <string name="str_infomation">Information</string>
    <string name="str_notifications">Notifications</string>
    <string name="study">Study</string>
    <string name="focus">Focus</string>
    <string name="chanting">Chanting</string>
    <string name="memory">Memory</string>
    <string name="relaxation">Relaxation</string>
    <string name="sleep">Sleep</string>
    <string name="intelligence">Intelligence</string>
    <string name="euphoria">Euphoria</string>
    <string name="healing">Healing</string>
    <string name="astral_travel">Astral Travel</string>
    <string name="third_eye">Third Eye</string>
    <string name="reativity">Creativity</string>
    <string name="creativity">Creativity</string>
    <string name="intuition">Intuition</string>
    <string name="ocean">Ocean</string>
    <string name="forest">Forest</string>
    <string name="rain">Rain</string>
    <string name="night">Night</string>
    <string name="lake">Lake</string>
    <string name="creek">Creek</string>
    <string name="grassland">Grassland</string>
    <string name="cave">Cave</string>
    <string name="farm">Farm</string>
    <string name="fire">Fire</string>
    <string name="waterfall">Waterfall</string>
    <string name="underwater">Underwater</string>
    <string name="dessert">Dessert</string>
    <string name="train">Train Journey</string>
    <string name="air_travel">Air Travel</string>
    <string name="cafe">Cafe</string>
    <string name="harmony">Harmony</string>
    <string name="hope_of_better">Hope For Better</string>
    <string name="look_within">Look Within</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="ligth_rain">LightRain</string>
    <string name="heavy_rain">HeavyRain</string>
    <string name="thunder">Thunder</string>
    <string name="rain_on_umbrella">Rain on Umbrella</string>
    <string name="rain_on_window">Rain on Window</string>
    <string name="snow">Snow</string>
    <string name="rain_on_roof">Rain on Roof</string>
    <string name="rain_on_tent">Rain on Tent</string>
    <string name="rain_on_puddle">Rain on Puddle</string>
    <string name="wind_leaves">Wind Leaves</string>
    <string name="wind">Wind</string>
    <string name="drip">Drip</string>
    <string name="bird">Bird</string>
    <string name="birds">Birds</string>
    <string name="seagull">Seagull</string>
    <string name="frog">Frog</string>
    <string name="froggs">Frogs</string>
    <string name="cricket">Cricket</string>
    <string name="cicada">Cicada</string>
    <string name="wolf">Wolf</string>
    <string name="loon">Loon</string>
    <string name="cat_purruing">Cat Purring</string>
    <string name="whale">Whale</string>
    <string name="owl">Owl</string>
    <string name="car">Car</string>
    <string name="airplane">Airplane</string>
    <string name="crowd">Crowd</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="construction_site">Construction site</string>
    <string name="lullaby">Lullaby</string>
    <string name="dryer">Dryer</string>
    <string name="hair_dryer">Hair Dryer</string>
    <string name="vacuum_cleaner">Vacuum Cleaner</string>
    <string name="fan">Fan</string>
    <string name="clock">Clock</string>
    <string name="keyboard">Keyboard</string>
    <string name="wiper">Wiper</string>
    <string name="cars_passing">Cars Passing</string>
    <string name="wind_chime">Wind Chime</string>
    <string name="meditation_bell">Meditation Bell</string>
    <string name="violin">Violin</string>
    <string name="harp">Harp</string>
    <string name="guzheng">Guzheng</string>
    <string name="white_noise">White Noise</string>
    <string name="brown_noise">Brown Noise</string>
    <string name="pink_noise">Pink Noise</string>
    <string name="guitar">Guitar</string>
    <string name="piano">Piano</string>
    <string name="flute">Flute</string>
    <string name="setting">Setting</string>
    <string name="meditation_time">Meditation Timer</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="policy">Private Policy</string>
    <string name="str_reminder">Set Reminder</string>
    <string name="notification_msg">Its Time to your Meditation Time..</string>
</resources>