<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/NavHome">

    <fragment
        android:id="@+id/NavHome"
        android:name="com.sound.meditionsoundapp.ui.Fragment.MainFragment"
        android:label="@string/str_home"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/NavDashboard"
        android:name="com.sound.meditionsoundapp.ui.Fragment.RelaxFragment"
        android:label="@string/str_dashboard"
        tools:layout="@layout/fragment_relax" />

    <fragment
        android:id="@+id/NavInformation"
        android:name="com.sound.meditionsoundapp.ui.Fragment.InfoFragment"
        android:label="@string/str_infomation"
        tools:layout="@layout/fragment_info" />

</navigation>